@@ -1,3 +1,8 @@
+2005-08-30  Sven Herzberg  <herzi@gnome-de.org>
+
+	* gnome-mouse-properties.c: listen to the XCURSOR_PATH environment
+	variable (Closes: #312534).
+
 2005-08-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-mouse-properties.c: (cursor_changed): Move the call to
